[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
distronet = {path = "../distronet"}
rustls = "0.23.7"
tokio-rustls = "0.26.0"
tokio = { version = "1.37.0", features = ["io-std", "net", "io-util"] }
rustls-pemfile = "2.1.2"
