[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
futures = "0.3.30"
parking_lot = "0.12.2"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.200", features = ["derive"] }
log = { version = "0.4.21", features = ["serde"] }
simple_logger = "5.0.0"
rustls = "0.23.7"
tokio-rustls = "0.26.0"
rustls-pemfile = "2.1.2"
